# latale-proxy-server

./: .gitignore  LaTaleProxyServer.spec  client.py  client.spec  decryptor.py  decryptor.spec  encryptor.py  encryptor.spec  keyboard.py  proxy.ini  proxy.py  pyproject.toml  requirements.txt
DATA/CSV/: ABUSE_LIST.csv  ACHIEVE.csv  ACHIEVE_MISSION.csv  ACHIEVE_RANK.csv  ACTION_INTERFACE.csv  AFTERIMAGE.csv  AFTERIMAGE_DETAIL.csv  ATTACK_TREE.csv  AUCTION_ITEM.csv  AUCTION_TYPE.csv  AWAKEN_EXP.csv  AWAKEN_MISSION.csv  AWAKEN_OPEN_MISSION.csv  AWAKEN_SKILL.csv  AWAKEN_TREE.csv  BAN_LIST.csv  BATTLEPASS_INFO.csv  BATTLEPASS_LEVEL.csv  BATTLEPASS_MISSION.csv  BATTLEPASS_REWARD_DETAIL.csv  BEATTACKED.csv  BEAUTY_SHOP.csv  BOOSTER.csv  CARDBINDER.csv  CASHSHOP_DEFAULT.csv  CASHSHOP_HELP.csv  CASH_ADVERTISE.csv  CASH_PRICE_RATIO.csv  CASH_SHOP.csv  CASH_SHOP1.csv  CASH_SHOP_BURNING.csv  CASH_SHOP_HOT.csv  CASH_SHOP_HOT_BURNING.csv  CASH_SHOP_LIMIT.csv  CHAIN_STAT.csv  CHALLENGE.csv  CHALLENGE_DETAIL.csv  CHAT_COLOR.csv  CHAT_COLOURING.csv  CHAT_COMMAND.csv  (+265 more)
DATA/LDT/: ABUSE_LIST.LDT  ACHIEVE.LDT  ACHIEVE_MISSION.LDT  ACHIEVE_RANK.LDT  ACTION_INTERFACE.LDT  AFTERIMAGE.LDT  AFTERIMAGE_DETAIL.LDT  ATTACK_TREE.LDT  AUCTION_ITEM.LDT  AUCTION_TYPE.LDT  AWAKEN_EXP.LDT  AWAKEN_MISSION.LDT  AWAKEN_OPEN_MISSION.LDT  AWAKEN_SKILL.LDT  AWAKEN_TREE.LDT  BAN_LIST.LDT  BATTLEPASS_INFO.LDT  BATTLEPASS_LEVEL.LDT  BATTLEPASS_MISSION.LDT  BATTLEPASS_REWARD_DETAIL.LDT  BEATTACKED.LDT  BEAUTY_SHOP.LDT  BOOSTER.LDT  CARDBINDER.LDT  CASHSHOP_DEFAULT.LDT  (+278 more)
proxy/: __init__.py  enums.py  server.py
(+7 files in other folders)
