[tool.poetry]
name = "latale-proxy-server"
version = "0.1.0"
description = ""
authors = ["mago960806 <mago960806@hotmail.com>"]

[tool.black]
line-length = 200

[tool.isort]
profile = "black"
length_sort = true
line_length = 200

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
